Correct spelling of 'Andrew D. Bagdanov' in index.html

--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
               <a href="http://sofienbouaziz.com">Stefano Berretti</a>,
             </span>
             <span class="author-block">
-              <a href="https://www.danbgoldman.com">Adrew D. Bagdanov</a>,
+              <a href="https://www.danbgoldman.com">Andrew D. Bagdanov</a>,
             </span>
           </div>
 
