--- a/index.html
+++ b/index.html
@@ -248,6 +248,71 @@ Florence, Florence, Italy.</span>
 
     </div>
 
+
+        <div class="columns is-centered">
+
+      <!-- Visual Effects. -->
+      <div class="column">
+        <div class="content">
+          <h2 class="title is-4">Pretrained MDM</h2>
+          <p><i>Prompt: "a person jogs in place"</i></p>
+          <video id="dollyzoom" autoplay controls muted loop playsinline height="100%">
+            <source src="./static/videos/MDM/Pretrained/00099.mp4"
+                    type="video/mp4">
+          </video>
+        </div>
+      </div>
+      <!--/ Visual Effects. -->
+
+      <!-- Matting. -->
+      <div class="column">
+        <h2 class="title is-4">Pretrained StableMoFusion </h2>
+        <div class="columns is-centered">
+          <div class="column content">
+            <p><i>Prompt: "person is doing some 90's dances"</i></p>
+            <video id="matting-video" autoplay controls muted loop playsinline height="100%">
+              <source src="./static/videos/StableMoFusion/PRETRAINED/000379.mp4"
+                      type="video/mp4">
+            </video>
+          </div>
+
+        </div>
+      </div>
+
+    </div>
+
+    <div class="columns is-centered">
+
+      <!-- Visual Effects. -->
+      <div class="column">
+        <div class="content">
+          <h2 class="title is-4">Ours MDM finetuned</h2>
+          <p><i>Prompt: "a person jogs in place"</i></p>
+          <video id="dollyzoom" autoplay controls muted loop playsinline height="100%">
+            <source src="./static/videos/MDM/FineTuned/00099.mp4"
+                    type="video/mp4">
+          </video>
+        </div>
+      </div>
+      <!--/ Visual Effects. -->
+
+      <!-- Matting. -->
+      <div class="column">
+        <h2 class="title is-4">Ours StableMoFusion finetuned </h2>
+        <div class="columns is-centered">
+          <div class="column content">
+            <p><i>Prompt: "person is doing some 90's dances"</i></p>
+            <video id="matting-video" autoplay controls muted loop playsinline height="100%">
+              <source src="./static/videos/StableMoFusion/FINETUNED/000379.mp4"
+                      type="video/mp4">
+            </video>
+          </div>
+
+        </div>
+      </div>
+
+    </div>
+
     <!--/ Matting. -->
 
     <!-- Concurrent Work. -->
